test_data/streamwalk/valid/numbers/01_integer.case
# OPTIONS

MODE: AJIS
COMMENTS: off
DIRECTIVES: off
IDENTIFIERS: off
MAX_DEPTH: 64
MAX_TOKEN_BYTES: 1048576

# INPUT

12345

# EXPECTED

NUMBER b"12345"
END_DOCUMENT
